--- a/profile.html
+++ b/profile.html
@@ -92,10 +92,10 @@
 			
 			
 			<div class = log-history-container 
-			style = "background-color: rgb(231, 231, 231);
+			style = "background-color: #f6f6f7;
 			height: 343px;
 			width: 100%;
-			padding: 15px;
+			padding: 10px;
 			border-radius: 15px;
 			margin-bottom: 14px;
 			margin-top: -10px;">
@@ -321,21 +321,21 @@
 
 			<div class = "goalstab" style = "margin-top: -19px;">
 				<div class = "mini"  style = "text-align: left;">
-					<img class="pic" src="headache.png" width="40px" height="40px">
+					<img class="pic" src="headache.png" width="35px" height="35px">
 					<label class = "summary">
 						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="nausea1.png" width="40px" height="40px">
+					<img class="pic" src="nausea1.png" width="35px" height="35px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
 				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="stress.png" width="40px" height="40px">
+					<img class="pic" src="stress.png" width="35px" height="35px">
 					<label class = "summary">
 						Stress is most associated with burnout
 					</label>
