--- a/profile.html
+++ b/profile.html
@@ -320,21 +320,21 @@
 			<br>
 
 			<div class = "goalstab" style = "margin-top: -19px;">
-				<div class = "mini"  style = "text-align: left;">
+				<div class = "mini"  style = "text-align: left; top:-5px">
 					<img class="pic" src="headache.png" width="50px" height="50px">
 					<label class = "summary">
 						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
-				<div class = "mini" style = "text-align: left;">
+				<div class = "mini" style = "text-align: left; top:-5px">
 					<img class="pic" src="nausea1.png" width="50px" height="50px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
-				<div class = "mini" style = "text-align: left;">
+				<div class = "mini" style = "text-align: left; top:-5px">
 					<img class="pic" src="stress.png" width="50px" height="50px">
 					<label class = "summary">
 						Stress is most associated with burnout
