--- a/profile.html
+++ b/profile.html
@@ -92,10 +92,10 @@
 			
 			
 			<div class = log-history-container 
-			style = "background-color: #f6f6f7;
+			style = "background-color: rgb(231, 231, 231);
 			height: 343px;
 			width: 100%;
-			padding: 10px;
+			padding: 15px;
 			border-radius: 15px;
 			margin-bottom: 14px;
 			margin-top: -10px;">
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:69.5px; font-size:15px;">You logged for 4 days in a row! Keep it up!</label>
+		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
 
@@ -302,7 +302,7 @@
 				<div class="emptyemoji" style = "padding: 9px;">👈🏼</div>
 				<div class="emptytext">Select a log entry to view its details</div>
 			</div>
-			<div id = "entry-info" class = "symptoms-selected-div-block" style="display: flex;height: 162px;flex-direction: column;justify-content: space-around;align-content: stretch;align-items: stretch;"">
+			<div id = "entry-info" class = "symptoms-selected-div-block" style = "display:none;">
 				<p id = "entry-info-text" class = "symptoms-selected-text test"> </p>
 			</div>
 
@@ -320,22 +320,22 @@
 			<br>
 
 			<div class = "goalstab" style = "margin-top: -19px;">
-				<div class = "mini"  style = "text-align: left;">
-					<img class="pic" src="headache.png" width="35px" height="35px">
+				<div class = "mini"  style = "text-align: left; position:relative; top:-5px">
+					<img class="pic" src="headache.png" width="50px" height="50px">
 					<label class = "summary">
 						Headaches are most associated with poor focus
 					</label>
 			    </div>
 
-				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="nausea1.png" width="35px" height="35px">
+				<div class = "mini" style = "text-align: left; position:relative; top:-5px">
+					<img class="pic" src="nausea1.png" width="50px" height="50px">
 					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			   </div>
 
-				<div class = "mini" style = "text-align: left;">
-					<img class="pic" src="stress.png" width="35px" height="35px">
+				<div class = "mini" style = "text-align: left; position:relative; top:-5px">
+					<img class="pic" src="stress.png" width="50px" height="50px">
 					<label class = "summary">
 						Stress is most associated with burnout
 					</label>
