--- a/profile.html
+++ b/profile.html
@@ -92,10 +92,10 @@
 			
 			
 			<div class = log-history-container 
-			style = "background-color: rgb(231, 231, 231);
+			style = "background-color: #f6f6f7;
 			height: 343px;
 			width: 100%;
-			padding: 15px;
+			padding: 10px;
 			border-radius: 15px;
 			margin-bottom: 14px;
 			margin-top: -10px;">
@@ -277,8 +277,8 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:29.5px; font-size:19px;">You logged for 4 days in a row! Keep it up!</label>
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/checkup.html';" id="log">Log your symptoms</a><br/>
+		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:69.5px; font-size:15px;">You logged for 4 days in a row! Keep it up!</label>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
 
 
 		<div class = "avatar" style = "top:500px; left:25px">
