--- a/profile.html
+++ b/profile.html
@@ -350,7 +350,7 @@
 
 
 	<div class = "contentwrap">
-		<div class = "nav">
+		<div class = "nav" style="margin-top: 20px;">
 			<div class="button" onclick = "location.href='homepage.html';">
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
