--- a/profile.html
+++ b/profile.html
@@ -183,9 +183,9 @@
 			"10/03/21 - stomachache, nausea and flu symptoms",
 			"10/12/21 - weakness, achiness", 
 			"10/20/21 - difficulty breathing", 
-			"11/01/21 - stress, burnout, anxiety", 
+			"11/01/21 - stress, neckpain, anxiety", 
 			"11/02/21 - stress", 
-			"11/03/21 - stress and burnout", 
+			"11/03/21 - stress and neckpain", 
 			"11/04/21 - weakness"
 		];
 			
@@ -390,9 +390,9 @@
 				"abdomen: stomach pain (6) <br> body: nausea (4) <br> body: fever (6)",
 				"body: muscle weakness (5) <br> body: mutliple stiff joints (7)",
 				"chest: trouble breathing (8)",
-				"feeling: stressed (7) <br> body: inability to sleep (9) <br> body: fatigue (10) <br> mental: decreased energy (6) <br> feeling: on edge (6)",
+				"feeling: stressed (7) <br> body: inability to sleep (9) <br> neck: pain (10) <br> mental: decreased energy (6) <br> feeling: on edge (6)",
 				"feeling: stressed (8) <br> feeling: defeated (9) <br> feeling: appetite change (6)",
-				"feeling: stressed (5) <br> body: sleepiness (8) <br> feeling: restless (8) <br> feeling: sad (7)",
+				"feeling: stressed (5) <br> neck: pain (8) <br> feeling: sad (7)",
 				"body: muscle weakness (7)"
 			];
 
